
# 0,1,0,20210127
	Camera Target seprated from FOV Target.
	Camera Target tools puted on 'Properties > Object Data (Camera) > Target/Tools' panel.
	'Blender Transform Type' added to Options make 'W,E,R' Keys work like Blender 'G,R'S' Keys (Need to restart blender on change)

# 0,1,0,20210124
	'TWEAK MMB + Shift' Align view (Replacement of 'TWEAK MMB + Alt' in Blender Default for 3DsMax Mode).
	Zoom mode setting to Horizontal mode when Maya navigation active.
	Joystick connector remove old driver if exist.
	Camera target control the F-Stop of Depth of Field too.

# 0,1,0,20210122
	'Hair guides from/to curve' added to View3D:Tools/Particle Menu.
	Mesh Edit mode Skin Resize keymap changed to 'Ctrl + Shift + A' (Max mode).
	Joystic to Shape key connector added to link context menu (Ctrl + L).
	'Weight to Vertex Color' puted in View3d/ Paint menu (Vertex paint Mode).
	'A' copy active object material to selected objects as 3DsMax "Assign Material to Selection" (Max mode).
	'Create' and 'Tools' Menus shows only in object mode.
	'Shift + T' open External Data context menu replacement for 3DsMax Asset Tracking (Max mode).

# 0,1,0,20210110
	New Selection Set for Armature (Pose mode only) (View3D/ Rigth Panel/ Tool/ Selection)

# 0,1,0,20210106
	Backburner Tool Updated.
	"BsMax_2_80\tools\internal\render\backburner.py" Could be installed as a standalone addons too.
	The function that has changed timeline color on auto on cused to crash blender some time. disabled till find a solution.

# 0,1,0,20210103
	Submit Render jobs to Backburner (Original code from "Matt Ebb | Blaize | Anthony Hunt | Spirou4D") (For Now Windows Only).
	Updated "Backburner" addon for Blender 2.8x, 2.9x.
	Add Specific Frames type ('1,3,5-7') to "Backburner" tool.
	'Ctrl+Shift+A' Create primitive Menu added to blender key-maps mode.

# 0,1,0,20201229
	Armature.arrach operator bug fixed
	Hair guide from curve operator compatibility issue with Blender 2.91 fix.

# 0,1,0,20201227